--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 * {
-  background-color: #7a7a7a !important;
-  color: #ffffff !important;
-  padding: 1rem !important;
-  margin: 1rem !important;
-  border-radius: 1rem !important;
-};
+  background-color: #706d6d !important;
+  color: aliceblue !important;
+  padding: 0.5rem !important;
+}
